--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.8.1",
         "morgan": "^1.10.0",
         "nodemailer": "^6.9.16",
         "otp-generator": "^4.0.1",
